tests/errors/syn_hw5_typeck_typenames.kt
fun main() {
    var j : Int = 0;
    var s : atypename;
 //   s = "hello";
 //   j = s.len();
 //   j = dict();
    println("{j}");
}
// Test Output:[expect type name error on line 3]